--- a/app/views/review/members_homepage.erb
+++ b/app/views/review/members_homepage.erb
@@ -9,9 +9,7 @@
 <br></br>
   <a href="/logout">Logout</a>
 <br></br>
-<form method="POST" action="/review">
-  <input type="submit" id=submit value="Create new review!">
-</form>
+  <a href="/review/new">New Review!</a>
 
 <h3>All reviews</h3>
 <ul>
@@ -21,3 +19,13 @@
     </li>
   <% end %>
 </ul>
+
+<!DOCTYPE html>
+<html>
+<head>
+      <title></title>
+</head>
+<body>
+
+</body>
+</html>
