--- a/app/views/user/logout.erb
+++ b/app/views/user/logout.erb
@@ -2,3 +2,12 @@
 <form method="POST" action="/logout">
   <input type="submit" id="submit" value="LOGOUT">
 </form>
+<!DOCTYPE html>
+<html>
+<head>
+      <title></title>
+</head>
+<body>
+
+</body>
+</html>
