--- a/app/views/review/new.erb
+++ b/app/views/review/new.erb
@@ -7,31 +7,47 @@
   <h2>Welcome, <%= @user.username %></h2>
   <h3>Create New review</h3>
 
-  <form method="POST" action="/tweets">
+  <form method="POST" action="/reviews">
     <label for="content">Your Review:</label>
   </br>
-    <label for="content">Title:</label>
+    <label for="title">Title:</label>
     <input type="text" name="title" id="title">
   </br>
+    <h3> What are you reviewing today?</h3>
+    <input type="radio" id="alcohol" name="reviewing" value="alcohol">
+    <label for="alcohol">Alcohol</label></br>
+    <input type="radio" id="tobacco" name="reviewing" value="tobacco">
+    <label for="tobacco">Tobacco</label></br>
+    <input type="radio" id="both" name="reviewing" value="both">
+    <label for="both">both</label>
+  <br></br>
+    <label for="brand">Brand(s):</label>
+    <input type="text" name="brand" id=brand placeholder="Jameson, Monte Cristo"
+    onfocus="this.placeholder = ''"
+    onblur="this.placeholder = 'enter the brand here!'" />
+  <br></br>
+    <label for="type">Type(s):</label>
+    <input type="text" name="type" id=type placeholder="Whiskey / Mild"
+    onfocus="this.placeholder = ''"
+    onblur="this.placeholder = 'enter the type here!'" />
+  <br></br>
     <label for"content">Rating:</label>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <div class="rate">
-    <input type="radio" id="star5" name="rate" value="5" />
-    <label for="star5" title="text">5 stars</label>
-    <input type="radio" id="star4" name="rate" value="4" />
-    <label for="star4" title="text">4 stars</label>
-    <input type="radio" id="star3" name="rate" value="3" />
-    <label for="star3" title="text">3 stars</label>
-    <input type="radio" id="star2" name="rate" value="2" />
-    <label for="star2" title="text">2 stars</label>
-    <input type="radio" id="star1" name="rate" value="1" />
-    <label for="star1" title="text">1 star</label>
-  </div>
+      <meta charset="UTF-8">
+      <link rel="stylesheet" type="text/css" href="rating.css">
+      <div class="rate">
+        <input type="radio" id="star5" name="rate" value="5" />
+        <label for="star5" title="text">5 stars</label>
+        <input type="radio" id="star4" name="rate" value="4" />
+        <label for="star4" title="text">4 stars</label>
+        <input type="radio" id="star3" name="rate" value="3" />
+        <label for="star3" title="text">3 stars</label>
+        <input type="radio" id="star2" name="rate" value="2" />
+        <label for="star2" title="text">2 stars</label>
+        <input type="radio" id="star1" name="rate" value="1" />
+        <label for="star1" title="text">1 star</label>
+      </div>
   </br>
-    <textarea rows="10" cols="50"
-    id="content" name="content">
-  </textarea>
+    <textarea rows="20" cols="100" placeholder="Write your review here..."></textarea>
   </br>
   </br>
     <input type="submit" id="submit">
