fixing migrations, working on getting forms to save.

--- a/app/views/review/index.erb
+++ b/app/views/review/index.erb
@@ -5,7 +5,16 @@
       <h1> Here is a list of all your reviews. Here you can select, edit or delete a review you have made.</h1>
 </head>
 <body>
-  <%= @review %>
+  <ul>
+    <% Review.all.each do |r| %>
+      <li>
+        <%= r.title %>
+        <%= r.brand %>
+        <%= r.type %>
+        <%= r.content %>
+      </li>
+    <% end %>
+  </ul>
 
 </body>
 </html>
