--- a/app/views/review/new.erb
+++ b/app/views/review/new.erb
@@ -8,32 +8,24 @@
   <h3>Create New review</h3>
 
   <form method="POST" action="/reviews">
-    <label for="content">Your Review:</label>
+    <h1>Your Review:</h1>
   </br>
     <label for="title">Title:</label>
     <input type="text" name="title" id="title">
-  </br>
-    <h3> What are you reviewing today?</h3>
-    <input type="radio" id="alcohol" name="reviewing" value="alcohol">
-    <label for="alcohol">Alcohol</label></br>
-    <input type="radio" id="tobacco" name="reviewing" value="tobacco">
-    <label for="tobacco">Tobacco</label></br>
-    <input type="radio" id="both" name="reviewing" value="both">
-    <label for="both">both</label>
   <br></br>
-    <label for="brand">Brand(s):</label>
-    <input type="text" name="brand" id=brand placeholder="Jameson, Monte Cristo"
+    <label for="brand">Brand:</label>
+    <input type="text" name="brand" id=brand placeholder="Jameson, etc."
     onfocus="this.placeholder = ''"
     onblur="this.placeholder = 'enter the brand here!'" />
   <br></br>
-    <label for="type">Type(s):</label>
-    <input type="text" name="type" id=type placeholder="Whiskey / Mild"
+    <label for="type">Type:</label>
+    <input type="text" name="type" id=type placeholder="Whiskey / Sours"
     onfocus="this.placeholder = ''"
     onblur="this.placeholder = 'enter the type here!'" />
   <br></br>
-    <label for"content">Rating:</label>
+    <label for"rating">Rating:</label>
       <meta charset="UTF-8">
-      <link rel="stylesheet" type="text/css" href="rating.css">
+      <link rel="stylesheet" type="text/css" href="./stylesheets/rating.css">
       <div class="rate">
         <input type="radio" id="star5" name="rate" value="5" />
         <label for="star5" title="text">5 stars</label>
@@ -47,7 +39,7 @@
         <label for="star1" title="text">1 star</label>
       </div>
   </br>
-    <textarea rows="20" cols="100" placeholder="Write your review here..."></textarea>
+    <textarea rows="20" cols="100" for"content" placeholder="Write your review here..."></textarea>
   </br>
   </br>
     <input type="submit" id="submit">
