need to rewatch videos on forms, forms arent saving

--- a/app/views/review/index.erb
+++ b/app/views/review/index.erb
@@ -6,7 +6,7 @@
 </head>
 <body>
   <ul>
-    <% Review.all.each do |r| %>
+    <% @review.each do |r| %>
       <li>
         <%= r.title %>
         <%= r.brand %>
