--- a/app/views/review/new.erb
+++ b/app/views/review/new.erb
@@ -26,7 +26,7 @@
     <label for"rating">Rating:</label>
       <meta charset="UTF-8">
       <link rel="stylesheet" type="text/css" href="./stylesheets/rating.css">
-      <div class="rate">
+      <div class="rating">
         <input type="radio" id="star5" name="rate" value="5" />
         <label for="star5" title="text">5 stars</label>
         <input type="radio" id="star4" name="rate" value="4" />
@@ -39,7 +39,9 @@
         <label for="star1" title="text">1 star</label>
       </div>
   </br>
-    <textarea rows="20" cols="100" for"content" placeholder="Write your review here..."></textarea>
+    <textarea rows="20" cols="100"
+    id="content" name="content" placeholder="Write your review here...">
+    </textarea>
   </br>
   </br>
     <input type="submit" id="submit">
