current build has flash errors for everything thats working, need to fix form

--- a/app/views/user/login.erb
+++ b/app/views/user/login.erb
@@ -16,5 +16,10 @@
       <br>
         <input type="submit" id="submit" value="login">
       </form>
+      <mark>
+        <% if flash.has?(:login_error) %>
+          <%= flash[:login_error]%>
+        <% end %>
+      </mark>
     </body>
 </html>
