--- a/app/views/review/new.erb
+++ b/app/views/review/new.erb
@@ -46,5 +46,10 @@
   </br>
     <input type="submit" id="submit">
   </form>
+  <mark>
+    <% if flash.has?(:form_error) %>
+      <%= flash[:form_error]%>
+    <% end %>
+  </mark>
 </body>
 </html>
