little all over the place, gonna start deleting things

--- a/app/views/review/index.erb
+++ b/app/views/review/index.erb
@@ -5,7 +5,13 @@
       <h1> Here is a list of all your reviews. Here you can select, edit or delete a review you have made.</h1>
 </head>
 <body>
-
-
+<% @review.each do |r| %>
+  <%= r.title %>
+</br>
+  <%= r.rating %> stars
+</br>
+  <%= r.content %>
+</br>
+<%end%>
 </body>
 </html>
