--- a/app/views/review/new.erb
+++ b/app/views/review/new.erb
@@ -13,26 +13,17 @@
     <label for="title">Title:</label>
     <input type="text" name="title" id="title">
   <br></br>
-    <label for="brand">Brand:</label>
-    <input type="text" name="brand" id=brand placeholder="Jameson, etc."
-    onfocus="this.placeholder = ''"
-    onblur="this.placeholder = 'enter the brand here!'" />
-  <br></br>
     <label for"rating">Rating:</label>
-      <meta charset="UTF-8">
-      <link rel="stylesheet" type="text/css" href="./stylesheets/rating.css">
-      <div class="rating">
-        <input type="radio" id="star5" name="rate" value="5" />
+        <input type="radio" id="star5" name="rating" value="5" />
         <label for="star5" title="text">5 stars</label>
-        <input type="radio" id="star4" name="rate" value="4" />
+        <input type="radio" id="star4" name="rating" value="4" />
         <label for="star4" title="text">4 stars</label>
-        <input type="radio" id="star3" name="rate" value="3" />
+        <input type="radio" id="star3" name="rating" value="3" />
         <label for="star3" title="text">3 stars</label>
-        <input type="radio" id="star2" name="rate" value="2" />
+        <input type="radio" id="star2" name="rating" value="2" />
         <label for="star2" title="text">2 stars</label>
-        <input type="radio" id="star1" name="rate" value="1" />
+        <input type="radio" id="star1" name="rating" value="1" />
         <label for="star1" title="text">1 star</label>
-      </div>
   </br>
     <textarea rows="20" cols="100"
     id="content" name="content" placeholder="Write your review here...">
